--- a/coffee-cat/package.json
+++ b/coffee-cat/package.json
@@ -29,6 +29,7 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.1",
     "ng-particles": "^2.7.3",
+    "ngx-bootstrap": "^12.0.0",
     "ngx-pagination": "^6.0.3",
     "ngx-skeleton-loader": "^2.10.0",
     "rxjs": "~6.6.0",
